--- a/templates/login.html
+++ b/templates/login.html
@@ -14,37 +14,37 @@
                 <h2>Welcome back!</h2>
                 <p>Enter your Credentials to access your account</p>
 
-               <form action="/login" method="POST">
-    <div class="input-group">
-        <label>Email address</label>
-        <input type="email" name="email" placeholder="Enter your email" required>
-    </div>
+                <form action="/login" method="POST">
+                    <div class="input-field">
+                        <label>Email address</label>
+                        <input type="email" name="email" placeholder="Enter your email" required>
+                    </div>
 
-    <div class="input-group">
-        <div class="password-header">
-            <label>Password</label>
-            <a href="#" class="forgot-link">forgot password</a>
-        </div>
-        <input type="password" name="password" placeholder="Enter your password" required>
-    </div>
+                    <div class="input-field">
+                        <div class="password-header">
+                            <label>Password</label>
+                            <a href="#" class="forgot-link">forgot password</a>
+                        </div>
+                        <input type="password" name="password" placeholder="Enter your password" required>
+                    </div>
 
-    <div class="checkbox-row">
-        <input type="checkbox" id="remember" name="remember">
-        <label for="remember">Remember for 30 days</label>
-    </div>
+                    <div class="checkbox-row">
+                        <input type="checkbox" id="remember" name="remember">
+                        <label for="remember">Remember for 30 days</label>
+                    </div>
 
-    <button type="submit" class="btn-login">Login</button>
-</form>
+                    <button type="submit" class="btn-submit">Login</button>
+                </form>
 
                 <div class="separator">Or</div>
 
                 <div class="social-grid">
-                    <a href="/login/google" class="social-item">
-                        <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="20">
+                    <a href="#" class="social-item">
+                        <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="18">
                         Sign in with Google
                     </a>
-                    <a href="/login/apple" class="social-item">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="20">
+                    <a href="#" class="social-item">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="18">
                         Sign in with Apple
                     </a>
                 </div>
