--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
         <div class="login-card">
             <div class="form-container">
                 <h2>Get Started Now</h2>
-                <p class="subtitle">Create your account to start analyzing code</p>
+                <p>Create your account to start analyzing code</p>
 
                 <form action="/signup" method="POST">
                     <div class="input-field">
@@ -30,22 +30,22 @@
                         <input type="password" name="password" placeholder="Create a password" required>
                     </div>
 
-                    <div class="remember-row">
+                    <div class="checkbox-row">
                         <input type="checkbox" id="terms" name="terms" required>
                         <label for="terms">I agree to the <u>terms & policy</u></label>
                     </div>
 
-                    <button type="submit" class="submit-btn">Signup</button>
+                    <button type="submit" class="btn-submit">Signup</button>
                 </form>
 
                 <div class="separator">Or</div>
 
                 <div class="social-grid">
-                    <a href="/login/google" class="social-item">
+                    <a href="#" class="social-item">
                         <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="18">
                         Sign in with Google
                     </a>
-                    <a href="/login/apple" class="social-item">
+                    <a href="#" class="social-item">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="18">
                         Sign in with Apple
                     </a>
