Initial commit with Email and Login working

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
                     <div class="input-field">
                         <div class="password-header">
                             <label>Password</label>
-                            <a href="#" class="forgot-link">forgot password</a>
+                            <a href="/forgot-password" class="forgot-link">forgot password</a>
                         </div>
                         <input type="password" name="password" placeholder="Enter your password" required>
                     </div>
