--- a/templates/login.html
+++ b/templates/login.html
@@ -43,14 +43,17 @@
                         <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="18">
                         Sign in with Google
                     </a>
-                    <a href="#" class="social-item">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="18">
-                        Sign in with Apple
-                    </a>
-                </div>
+                   <div class="social-grid">
+    <a href="{{ url_for('google_login') }}" class="social-item">
+        <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="18">
+        Sign in with Google
+    </a>
 
-                <p class="footer-text">Don’t have an account? <a href="/signup">Sign Up</a></p>
-            </div>
+    <a href="#" class="social-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" width="18">
+        Sign in with Apple
+    </a>
+</div>
 
             <div class="visual-container">
                 <div class="robot-circle">
